--- a/index.html
+++ b/index.html
@@ -3,35 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Developer Bio</title>
+    <title>Portefolio Bio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="jscript.js" defer></script>
     
     </style>
   </head>
-  <body>
-    <div id="greeting-container">
-      <img id="userPhoto" src="./images/CarlosM..png" alt="User Photo" />
-      <p class="centered-text" style="font-size: 25px">
-        Hi, I'm Carlos, an aspiring junior developer
-      </p>
-      <button id="scrollButton" onclick="scrollToAbout()">View More</button>
-      <div class="arrow-container">
-        <div class="arrow"></div>
-      </div>
-    </div>
+  <h2 class="centered-text">Power Apps</h2>
 
-    <header class="nav">
+  <div id="greeting-container">
+    <div class="image-container">
+      <iframe title="rankingtest" src="https://app.powerbi.com/view?r=eyJrIjoiNzRkMzcwMWMtYmNjNS00ZWJiLTgwMjItYzlmZDc4MjBmMDVmIiwidCI6IjkyNzQyZWFlLWExMTktNDNmYi1hOTU2LWQ3ZGVmNzQ0ODgxYSIsImMiOjh9" frameborder="0" allowFullScreen="true"></iframe>
+
+    </div>
+    <div class="image-container">
+      <iframe title="rankingtest" src="https://app.powerbi.com/view?r=eyJrIjoiNzRkMzcwMWMtYmNjNS00ZWJiLTgwMjItYzlmZDc4MjBmMDVmIiwidCI6IjkyNzQyZWFlLWExMTktNDNmYi1hOTU2LWQ3ZGVmNzQ0ODgxYSIsImMiOjh9" frameborder="0" allowFullScreen="true"></iframe>    </div>
+    <div class="image-container">
+      <img src="./images/image1.jpg" alt="Image 1">
+    </div>
+  </div>
+  
+
+    <!-- <header class="nav">
       <nav>
         <a href="#home" onclick="showHome()">Home</a>
         <a href="#about" onclick="showAbout()">About</a>
         <a href="#contact" onclick="showContact()">Contact</a>
       </nav>
-    </header>
+    </header> -->
 
     <div id="about-container">
       <div>
-        <h2 class="centered-text">About Me</h2>
+        <h2 class="centered-text">Power BI</h2>
         <!-- container2 -->
         <div id="about-content">
           <!-- container 3.1 -->
@@ -40,64 +43,13 @@
               A curious person looking for an opportunity to follow my passion:
               breaking into the world of technology and programming. With a
               critical and open mind, I am always looking to explore new ideas.
-              I enjoy sharing knowledge and collaborating with others to achieve
-              common goals. I am currently attending a coding bootcamp to gain
-              the skills and knowledge to start a new career as a programmer.
-              Endless curiosity drives me, so I am sure I could be an asset to
-              your team.
             </p>
+          <iframe title="rankingtest" width="500" height="800" src="https://app.powerbi.com/view?r=eyJrIjoiNzRkMzcwMWMtYmNjNS00ZWJiLTgwMjItYzlmZDc4MjBmMDVmIiwidCI6IjkyNzQyZWFlLWExMTktNDNmYi1hOTU2LWQ3ZGVmNzQ0ODgxYSIsImMiOjh9" frameborder="0" allowFullScreen="true"></iframe>
+
           </div>
           <!-- container3.2 -->
 
-          <div class="skills">
-            <!-- colunas -->
-            <div class="skills-column">
-              <div class="skills-item">
-                <img src="./images/html.png" alt="html" />
-                <div class="skills-name">HTML</div>
-              </div>
-              <div class="skills-item">
-                <img src="./images/CSS3_logo.svg.png" alt="css" />
-                <div class="skills-name">CSS</div>
-              </div>
-              <div class="skills-item">
-                <img src="./images/js.png" alt="javascript" />
-                <div class="skills-name">JavaScript</div>
-              </div>
-            </div>
-            <div class="skills-column">
-              <div class="skills-item">
-                <img src="./images/Git-Icon-1788C.png" alt="git" />
-                <div class="skills-name">Git</div>
-              </div>
-              <div class="skills-item skills-item--css">
-                <img src="./images/java-original.svg" alt="java" />
-                <div class="skills-name">Java</div>
-              </div>
-              <div class="skills-item">
-                <img src="./images/aws.svg.png" alt="aws" />
-                <div class="skills-name">AWS</div>
-              </div>
-              <div class="skills-item">
-                <img src="./images/Microsoft_.NET_logo.png" alt=".net" />
-                <div class="skills-name">dotNET</div>
-              </div>
-            </div>
-            <div class="skills-column">
-              <div class="skills-item">
-                <img src="./images/sql-server.png" alt="SQLServer" />
-                <div class="skills-name">SQLServer</div>
-              </div>
-              <div class="skills-item">
-                <img src="./images/apps.png" alt="PowerApps" />
-                <div class="skills-name">PowerApps</div>
-              </div>
-              <div class="skills-item">
-                <img src="./images/Microsoft-Power-BI-Logo.png" alt="PowerBI" />
-                <div class="skills-name">PowerBI</div>
-              </div>
-            </div>
-          </div>
+
         </div>
       </div>
     </div>
@@ -106,11 +58,8 @@
         <button id="downloadCVButton" onclick="downloadFile()">
           Download My CV
         </button>
-        <button id="githubButton" onclick="followGitLink()">
-          My GitHub
-        </button>
-        <button id="ppButton" onclick="followPPLink()">
-          Power Platform Portefolio
+        <button id="githubButton" onclick="followLink()">
+          Visit my GitHub
         </button>
       </div>
     </div>
