--- a/test/index.html
+++ b/test/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE HTML>
-
+<!--
+	Prologue by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<title>Carlos M,</title>
+		<title>Prologue by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -37,9 +41,9 @@
 					<!-- Social Icons -->
 						<ul class="icons">
 							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
-							<li><a href="https://github.com/cmmarques22" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://www.linkedin.com/in/carlos--marques/" class="icon brands fa-dribbble"><span class="label">LinkedIn</span></a></li>
-							<li><a href="mailto:carlos.marques22@live.com.com"class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="#" class="icon brands fa-dribbble"><span class="label">LinkedIn</span></a></li>
+							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -54,7 +58,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Carlos</strong>,<br />
+								<h2 class="alt">Hi! I'm <strong>Carlos</strong>, an aspiring<br />
 								 an aspiring Full stack developer.
 								<!-- <p>Ligula scelerisque justo sem accumsan diam quis<br />
 								vitae natoque dictum sollicitudin elementum.</p> -->
@@ -133,7 +137,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/CarlosM..png" alt=""  width="220px" height="250px" /></a>
+							<a href="#" class="image featured"><img src="" alt="" /></a>
 
 							<p>A curious person looking for an opportunity to follow my passion: breaking into the world of technology and programming. With a critical and open mind, I am always looking to explore new ideas. I enjoy sharing knowledge and collaborating with others to achieve common goals. I am currently attending a coding bootcamp to gain the skills and knowledge to start a new career as a programmer. Endless curiosity drives me, so I am sure I could be an asset to your team. </p>
 
@@ -148,7 +152,10 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p> Have a question? Feel free to to leave your details and i'll get back to you. </p>
+							<p>Elementum sem parturient nulla quam placerat viverra
+							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
+							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
+							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
 
 							<form method="post" action="#">
 								<div class="row">
@@ -173,7 +180,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Carlos Marques 2024.</li><li></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
