added new image transition

--- a/index.html
+++ b/index.html
@@ -80,13 +80,20 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/WILD2.png" alt="" /></a>
 										<header>
 											<h3>Angular App</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									
+
+										<a href="#" class="image fit" id="image1">
+											<img src="images/shady4.png" alt="" />
+											<img class="hover-image" src="images/shady.gif" alt="" />
+										</a>
+
+
 										<header>
 											<h3>Javascript Game</h3>
 										</header>
@@ -94,7 +101,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/ManoTodos.gif" alt="" /></a>
 										<header>
 											<h3>Canvas App</h3>
 										</header>
@@ -108,7 +115,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/judokuApp.gif" alt="" /></a>
 										<header>
 											<h3>JavaFx Game</h3>
 										</header>
