--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit" id="image1">
+										
+										<a href="#" class="image fit">
 
 											<!-- First image -->
-											<img src="images/shady4.png" alt="" />
+											<img src="images/wild2.png" alt="" />
 											<!-- Second Image -->
 											<img class="hover-image" src="images/shady.gif" alt="" />
 										</a>
@@ -115,9 +116,9 @@
 										<a href="#" class="image fit" id="image1">
 
 											<!-- First image -->
-											<img src="images/shady4.png" alt="" />
+											<img src="images/canvas.jpg" alt="" />
 											<!-- Second Image -->
-											<img class="hover-image" src="images/shady.gif" alt="" />
+											<img class="hover-image" src="images/ManoTodos.gif" alt="" />
 										</a>
 
 
@@ -149,11 +150,10 @@
 										<a href="#" class="image fit" id="image1">
 
 											<!-- First image -->
-											<img src="images/shady4.png" alt="" />
+											<img src="images/judoku.png" alt="" />
 											<!-- Second Image -->
-											<img class="hover-image" src="images/shady.gif" alt="" />
+											<img class="hover-image" src="images/judokuApp.gif" alt="" />
 										</a>
-
 
 										<header>
 											<h3>JavaFx Game</h3>
@@ -165,14 +165,14 @@
 										<a href="#" class="image fit" id="image1">
 
 											<!-- First image -->
-											<img src="images/shady4.png" alt="" />
+											<img src="images/judoku.png" alt="" />
 											<!-- Second Image -->
-											<img class="hover-image" src="images/shady.gif" alt="" />
+											<img class="hover-image" src="images/judokuApp.gif" alt="" />
 										</a>
 
-										
+
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Power Automate</h3>
 										</header>
 									</article>
 								</div>
