--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 											<!-- First image -->
 											<img src="images/wild2.png" alt="" />
 											<!-- Second Image -->
-											<img class="hover-image" src="images/shady.gif" alt="" />
+											<img class="hover-image" src="images/wild.gif" alt="" />
 										</a>
 										<header>
-											<h3>Angular App</h3>
+											<h3>Angular Full Stack App</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -108,6 +108,25 @@
 											<h3>Javascript Game</h3>
 										</header>
 									</article>
+
+									<article class="item">
+									
+
+										<a href="#" class="image fit" id="image1">
+
+											<!-- First image -->
+											<img src="https://app.powerbi.com/groups/b62e37ba-8b43-4f19-a0b3-fc44ebd3a8de/dashboards/853be9ee-8fb4-482e-ad80-859b44ebf966?experience=power-bi" alt="" />
+											<!-- Second Image -->
+											<img class="hover-image" src="images/shady.gif" alt="" />
+										</a>
+
+
+										<header>
+											<h3>Dashboard</h3>
+										</header>
+									</article>
+
+
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
@@ -132,14 +151,14 @@
 										<a href="#" class="image fit" id="image1">
 
 											<!-- First image -->
-											<img src="images/shady4.png" alt="" />
+											<img src="images/bi1.png" alt="" />
 											<!-- Second Image -->
-											<img class="hover-image" src="images/shady.gif" alt="" />
+											<img class="hover-image" src="images/bi.gif" alt="" />
 										</a>
 
 
 										<header>
-											<h3>Power Bi</h3>
+											<h3>Power BI</h3>
 										</header>
 									</article>
 								</div>
@@ -165,9 +184,9 @@
 										<a href="#" class="image fit" id="image1">
 
 											<!-- First image -->
-											<img src="images/judoku.png" alt="" />
+											<img src="images/paut.png" alt="" />
 											<!-- Second Image -->
-											<img class="hover-image" src="images/judokuApp.gif" alt="" />
+											<img class="hover-image" src="images/paut.gif" alt="" />
 										</a>
 
 
