--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<ul class="icons">
 							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 							<li><a href="https://github.com/cmmarques22" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://www.linkedin.com/in/carlos--marques/" class="icon brands fa-dribbble"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/carlos--marques/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="mailto:carlos.marques22@live.com.com"class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
