--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 									<article class="item">
 										
 										
-										<a href="#" class="image fit" id="image1">
+										<a href="https://github.com/cmmarques22/judokuApp" class="image fit" id="image1">
 
 											<!-- First image -->
 											<img src="images/judoku.png" alt="" />
